# jetproxy

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md  clang_analyze_helper.py  coverage_check.sh
example/: CMakeLists.txt  CustomDefinedDataTypes.hpp  EnumValuesExample.cpp  EnumValuesProxy.cpp  EnumValuesProxy.hpp  JetObjectProxy.cpp  JetObjectProxy.hpp  JetObjectProxyWithSubObjectType.cpp  JetObjectProxyWithSubObjectType.hpp  JetObjectProxyWithType.cpp  JetObjectProxyWithType.hpp  JetStaticObjectProxyWithType.cpp  JetStaticObjectProxyWithType.hpp  SelectionValuesProxy.cpp  SelectionValuesProxy.hpp  TestError.hpp  main.cpp
include/jetproxy/: AnalogVariableHandler.hpp  BaseIntrospectionHandler.hpp  DataType.hpp  DelayedSaver.hpp  EnumValueHandler.hpp  Error.hpp  ErrorCode.hpp  Event.hpp  Introspection.hpp  IntrospectionVariableHandler.hpp  JetProxy.hpp  JsonSchema.hpp  Method.hpp  NumericVariableHandler.hpp  ProxyJetStates.hpp  SelectionValueHandler.hpp  StringEnum.hpp  TypeFactory.hpp
include/jetproxy/test/: jethelperfunction.hpp
include/objectmodel/: ObjectModelConstants.hpp
lib/: CMakeLists.txt  DelayedSaver.cpp  EnumValueHandler.cpp  Error.cpp  ErrorCode.cpp  Event.cpp  Introspection.cpp  JetProxy.cpp  JsonSchema.cpp  Method.cpp  ProxyJetStates.cpp  SelectionValueHandler.cpp  StringEnum.cpp  TypeFactory.cpp
lib/pkg-config/: jetproxy.pc.in
test/: CMakeLists.txt  DataTypeTest.cpp  DelayedSaverTest.cpp  EnumValuesTest.cpp  ErrorCodeTest.cpp  EventTest.cpp  IntrospectionTest.cpp  JetProxyTest.cpp  JsonSchemaTest.cpp  MethodTest.cpp  ObjectTypeTest.cpp  SelectionValuesTest.cpp  StringEnumTest.cpp
